--- a/scss/style.scss
+++ b/scss/style.scss
@@ -298,7 +298,7 @@ div{
             display: block;
         }
     }
-    &.libros, &.documentales{
+    &.libros, &.documentales, &.peliculas{
         display: grid;
         grid-template-columns: repeat(3, 27%);
         justify-content: space-around;
@@ -343,6 +343,41 @@ div{
             }
         }
         &.info-#{$documental}{
+            width: 300px;
+            height: 450px;
+            background-color: $azul;
+            border-radius: 10px;
+            visibility: hidden;
+            padding: 1rem;
+            h4{
+                font-size: 1.2rem;
+            }
+            h5, p{  
+                font-size: 0.9rem;
+            }
+            }
+    }
+    $peliculas: peli1, peli2, peli3, peli4, peli5, peli6, peli7, peli8, peli9, peli10, peli11, peli12, peli13, peli14, peli15, peli16, peli17, peli18, peli19, peli20, peli21, peli22, peli23, peli24, peli25, peli26, peli27, peli28, peli29, peli30, peli31, peli32, peli33, peli34, peli35, peli36;
+    @each $peli in $peliculas{
+        &.#{$peli}{
+            width: 300px;
+            height: 450px;
+            background-image: url(../img/peliculas/#{$peli}.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
+            border-radius: 10px;
+            &:hover{
+                div.info-#{$peli}{
+                    visibility: visible;
+                }
+                p{
+                    color: $gris-claro;
+                }
+            }
+        }
+        &.info-#{$peli}{
             width: 300px;
             height: 450px;
             background-color: $azul;
