--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,28 @@ div {
     &.color-n{
         border-color: $naranja;
     } */ }
+  div.titulos-proyectos {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    background-color: #EFEBC8;
+    /*  border-radius: 10px; */
+    padding: 0 2rem 1.5rem 2rem;
+    /* margin-bottom: 2rem; */ }
+  div#titulo-etiquetado {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px; }
+  div#titulo-accion {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px; }
+  div.informacion-proyectos {
+    display: none;
+    background-color: #EFEBC8;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 2rem; }
+    div.informacion-proyectos img {
+      margin-bottom: 1rem; }
   div.involucrate {
     display: flex;
     justify-content: center;
@@ -3738,6 +3760,8 @@ footer {
     color: #EFEBC8;
     text-transform: uppercase;
     font-size: 1.5rem; }
+  footer.footer-proyectos {
+    margin-top: 2rem; }
 
 main.proyectos, main.busquedas {
   background-color: #1B4D41;
@@ -3835,9 +3859,9 @@ article#etiquetado ol {
   line-height: 2rem; }
 
 article.gestion-menstrual {
-  background-color: #EFEBC8;
-  padding-top: 3rem;
-  padding-bottom: 2rem; }
+  /* background-color: $gris-claro;
+        padding-top: 3rem;
+        padding-bottom: 2rem; */ }
   article.gestion-menstrual h3 {
     margin-top: 2rem; }
   article.gestion-menstrual ol {
@@ -3845,8 +3869,8 @@ article.gestion-menstrual {
     line-height: 2rem; }
 
 article#accion-barrial {
-  padding-top: 3rem;
-  padding-bottom: 1rem; }
+  /*  padding-top: 3rem;
+        padding-bottom: 1rem; */ }
   article#accion-barrial h3 {
     margin-top: 2rem; }
   article#accion-barrial p {
