--- a/scss/style.scss
+++ b/scss/style.scss
@@ -650,6 +650,11 @@ section{
 }
 
 article{
+    &#documentales{
+        h3{
+            height: 4rem;
+        }
+    }
     &#diferencial{
         padding-top: 2rem;
         padding-bottom: 2rem;
