modifique tama;o fotos libros y altura titulos

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -650,7 +650,7 @@ section{
 }
 
 article{
-    &#documentales{
+    &#documentales, &#peliculas, &#libros{
         h3{
             height: 4rem;
         }
